[package]
name = "tasky-futures-concurrency"
version = "0.1.0"
edition = "2021"
authors = ["thor <thorck@protonmail.com>"]
repository = "https://github.com/thor314/tasky-futures-concurrency"
description = """"""
license = "Unlicense OR MIT"

[dependencies]
# Binary
dotenv = "0.15"                                         # .env file parsing
clap = { version = "4.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
# Common
# optional => can use in a feature, otherwise, ignored; remove optional to use normally.
cfg-if = { version = "1.0.0", optional = true }                   # branching compilation logic
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
rand = { version = "0.8", optional = true }
# https://rhai.rs/book/start/features.html
rhai = { version = "1.8.0", optional = true } # scripting lanugage, yeet
cute = { version = "0.3" }                    # python-like list comprehensions

# Error Handling
thiserror = "1.0"
anyhow = "1.0"
# Async dependencies
tokio = { version = "1", features = ["full"] }
# tokio-stream = { version = "0.1.9" } # tokio 1.0 didn't ship with stream utilities
futures = { version = "0.3", features = ["executor", "thread-pool"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Your dependencies
tasky = "5.0.0"
futures-concurrency = "7.0.0"


[features]
some_feature = [
  "dep:serde",
  "dep:serde_json",
] # use this to use optional dependencies

[dev-dependencies]
# Bench
criterion = "0.5"
iai = "0.1"       # criterion alternative
# Testing utils
test-log = { version = "0.2", default-features = false, features = ["trace"] }
rstest = "0.19"
quickcheck = "1.0"
quickcheck_macros = "1"                                                        # derive 
arbitrary = { version = "1.1", features = ["derive"] }

[[test]]
name = "integration"
path = "tests/tests.rs"

[[bench]]
name = "bench"
harness = false
